objects/PRMLovsValues__c.object
<CustomObject>
    <fields>
        <fullName>MasterTranslation__c</fullName>
        <description>The field to save the master translation .</description>
        <label>Master Translation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRMLovs__c</fullName>
        <label>PRMLovs</label>
        <referenceTo>PRMLovs__c</referenceTo>
        <relationshipLabel>PRM Lovs Values</relationshipLabel>
        <relationshipName>PRM_Lovs_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The field to save the value of the translations.</description>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PRM Lovs Value</label>
    <nameField>
        <label>PRM Lovs Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Lovs Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>